additional changes to Unicorn project template

--- a/templates/service/Unicorn.Templates.Service/appsettings.Development.json
+++ b/templates/service/Unicorn.Templates.Service/appsettings.Development.json
@@ -13,7 +13,7 @@
     },
     "OneWayCommunicationSettings": {
       "ConnectionString": "amqp://guest:guest@localhost:5672",
-      "SubscriptionId": "ENTER RANDOM GUID"
+      "SubscriptionId": "SUBSCRIPTION_ID"
     },
     "AuthenticationSettings": {
       "AuthorityUrl": "https://localhost:44319/",
