--- a/templates/service/Unicorn.Templates.Service/appsettings.json
+++ b/templates/service/Unicorn.Templates.Service/appsettings.json
@@ -13,7 +13,7 @@
     },
     "OneWayCommunicationSettings": {
       "ConnectionString": "amqp://guest:guest@localhost:5672",
-      "SubscriptionId": "90b36af1-7727-48a6-a1cc-022d526b09a8"
+      "SubscriptionId": "SUBSCRIPTION_ID"
     },
     "AuthenticationSettings": {
       "AuthorityUrl": "https://localhost:44319/",
