added first steps towards service self-registration in service discovery service; added project for system health check

--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,5 @@
 /templates/Unicorn.Templates.1.0.0.nupkg
 /templates/.vs/ProjectEvaluation
 /templates/service/.vs
+/core/services/system-status/Unicorn.Core.Services.SystemStatus.HealthCheck/bin/Debug/net6.0
+/core/services/system-status/Unicorn.Core.Services.SystemStatus.HealthCheck/obj
