made changes in ServiceDiscovery service to make self registration in it possible

--- a/core/services/service-discovery/Unicorn.Core.Services.ServiceDiscovery/appsettings.Development.json
+++ b/core/services/service-discovery/Unicorn.Core.Services.ServiceDiscovery/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ServiceDiscoveryHostSettings": {
-    "DbConnectionString": "Server=127.0.0.1;Database=ServiceDiscoveryDb;User Id=sa;Password=admin1234;",
+    "DbConnectionString": "Server=127.0.0.1;Database=ServiceDiscoveryDb;User Id=sa;Password=aDmin1234;",
     "ServiceDiscoverySettings": {
       "Url": "http://localhost:5081"
     },
