--- a/core/services/service-discovery/Unicorn.Core.Services.ServiceDiscovery.DataAccess/Unicorn.Core.Services.ServiceDiscovery.DataAccess.csproj
+++ b/core/services/service-discovery/Unicorn.Core.Services.ServiceDiscovery.DataAccess/Unicorn.Core.Services.ServiceDiscovery.DataAccess.csproj
@@ -13,6 +13,11 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Unicorn.Core.Services.ServiceDiscovery.SDK\Unicorn.Core.Services.ServiceDiscovery.SDK.csproj" />
   </ItemGroup>
 
 </Project>
