--- a/core/services/service-discovery/Unicorn.Core.Services.ServiceDiscovery/appsettings.Development.json
+++ b/core/services/service-discovery/Unicorn.Core.Services.ServiceDiscovery/appsettings.Development.json
@@ -8,6 +8,7 @@
   "ServiceDiscoveryHostSettings": {
     "DbConnectionString": "Server=127.0.0.1;Database=ServiceDiscoveryDb;User Id=sa;Password=aDmin1234;",
     "ServiceDiscoverySettings": {
+      "ExecuteSelfRegistration": false,
       "Url": "http://localhost:5081"
     },
     "OneWayCommunicationSettings": {
