--- a/templates/service/tests/Unicorn.Templates.Service.Tests/Unicorn.Templates.Service.Tests.csproj
+++ b/templates/service/tests/Unicorn.Templates.Service.Tests/Unicorn.Templates.Service.Tests.csproj
@@ -20,4 +20,22 @@
     </PackageReference>
   </ItemGroup>
 
+	<ItemGroup>
+		<PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="SonarAnalyzer.CSharp" Version="8.33.0.40503">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+	</ItemGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+		<CodeAnalysisRuleSet>..\..\Unicorn-static-code-analysis.ruleset</CodeAnalysisRuleSet>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<CodeAnalysisRuleSet>..\..\Unicorn-static-code-analysis.ruleset</CodeAnalysisRuleSet>
+	</PropertyGroup>
+
 </Project>
