--- a/templates/service/Unicorn.Templates.Service.SDK/Unicorn.Templates.Service.SDK.csproj
+++ b/templates/service/Unicorn.Templates.Service.SDK/Unicorn.Templates.Service.SDK.csproj
@@ -25,4 +25,22 @@
 		<Protobuf Include="Services\gRPC\Protos\YOUR_SERVICE_NAMEGrpcService.proto" GrpcServices="Server, Client" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="SonarAnalyzer.CSharp" Version="8.33.0.40503">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+	</ItemGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+		<CodeAnalysisRuleSet>..\Unicorn-static-code-analysis.ruleset</CodeAnalysisRuleSet>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<CodeAnalysisRuleSet>..\Unicorn-static-code-analysis.ruleset</CodeAnalysisRuleSet>
+	</PropertyGroup>
+
 </Project>
