added endpoint for all HTTP configuration retrieval from ServiceDiscovery, some further work in health check service

--- a/core/services/system-status/Unicorn.Core.Services.SystemStatus.HealthCheck/appsettings.Development.json
+++ b/core/services/system-status/Unicorn.Core.Services.SystemStatus.HealthCheck/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ServiceDiscoverySettings": {
+    "Url": "http://localhost:5081"
   }
 }
