made changes for health check probing of microservices

--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,4 @@
 /templates/service/.vs
 /core/services/system-status/Unicorn.Core.Services.SystemStatus.HealthCheck/bin/Debug/net6.0
 /core/services/system-status/Unicorn.Core.Services.SystemStatus.HealthCheck/obj
+/courgette.log
