--- a/core/services/system-status/Unicorn.Core.Services.SystemStatus.HealthCheck/Unicorn.Core.Services.SystemStatus.HealthCheck.csproj
+++ b/core/services/system-status/Unicorn.Core.Services.SystemStatus.HealthCheck/Unicorn.Core.Services.SystemStatus.HealthCheck.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
+	<UserSecretsId>92ed8ca9-7f0b-4dc9-9783-60d1b345dce8</UserSecretsId>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
