--- a/core/services/system-status/Unicorn.Core.Services.SystemStatus.HealthCheck/appsettings.Development.json
+++ b/core/services/system-status/Unicorn.Core.Services.SystemStatus.HealthCheck/appsettings.Development.json
@@ -7,5 +7,31 @@
   },
   "ServiceDiscoverySettings": {
     "Url": "http://localhost:5081"
+  },
+  "HealthChecks-UI": {
+    "HealthChecks": [
+      {
+        "Name": "ServiceDiscovery",
+        "Uri": "http://localhost:5081/hc"
+      },
+      {
+        "Name": "Unicorn.Core.Development.ServiceHost",
+        "Uri": "http://localhost:5287/hc"
+      },
+      {
+        "Name": "Unicorn.Core.Development.ClientHost",
+        "Uri": "http://localhost:5001/hc"
+      }
+    ],
+    "Webhooks": [
+      {
+        "Name": "",
+        "Uri": "",
+        "Payload": "",
+        "RestoredPayload": ""
+      }
+    ],
+    "EvaluationTimeOnSeconds": 10,
+    "MinimumSecondsBetweenFailureNotifications": 60
   }
 }
