--- a/core/development/Unicorn.Core.Development.ClientHost/Unicorn.Core.Development.ClientHost.csproj
+++ b/core/development/Unicorn.Core.Development.ClientHost/Unicorn.Core.Development.ClientHost.csproj
@@ -11,6 +11,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="6.0.4" />
 		<PackageReference Include="FluentValidation" Version="10.3.6" />
 		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="10.3.6" />
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
