--- a/core/development/Unicorn.Core.Development.ServiceHost/appsettings.json
+++ b/core/development/Unicorn.Core.Development.ServiceHost/appsettings.json
@@ -25,10 +25,11 @@
   "ServiceHostConfiguration": {
     "ClientId": "resource_server_1",
     "ClientSecret": "846B62D0-DEF9-4215-A99D-86E6B8DAB342"
-  },
-  "Kestrel": {
-    "EndpointDefaults": {
-      "Protocols": "Http2"
-    }
   }
+  //,
+  //"Kestrel": {
+  //  "EndpointDefaults": {
+  //    "Protocols": "Http2"
+  //  }
+  //}
 }
