--- a/core/services/service-discovery/Unicorn.Core.Services.ServiceDiscovery/Unicorn.Core.Services.ServiceDiscovery.csproj
+++ b/core/services/service-discovery/Unicorn.Core.Services.ServiceDiscovery/Unicorn.Core.Services.ServiceDiscovery.csproj
@@ -10,12 +10,14 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="6.0.4" />
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
 		<PackageReference Include="Unicorn.Core.Infrastructure.HostConfiguration.SDK" Version="1.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.1">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="6.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
