--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -53,7 +53,7 @@ services:
         container_name: unicorn.core.services.servicediscovery
         environment:
             - ASPNETCORE_ENVIRONMENT=Development
-            - ASPNETCORE_URLS=https://unicorn.core.services.servicediscove:443;http://unicorn.core.services.servicediscove:80
+            - ASPNETCORE_URLS=https://unicorn.core.services.servicediscovery:443;http://unicorn.core.services.servicediscovery:80
             - ServiceDiscoveryHostSettings__DbConnectionString=Server=servicediscoverydb;Database=ServiceDiscoveryDb;User Id=sa;Password=aDmin1234;
         depends_on:
             - servicediscoverydb
@@ -105,6 +105,7 @@ services:
         container_name: unicorn.core.services.apigateway.ocelot
         environment:
             - ASPNETCORE_ENVIRONMENT=Development
+            - ASPNETCORE_URLS=https://unicorn.core.services.apigateway.ocelot:443;http://unicorn.core.services.apigateway.ocelot:80
         ports:
             - "8008:80"
             - "8009:443"
@@ -117,7 +118,21 @@ services:
         environment:
             - ASPNETCORE_ENVIRONMENT=Development
             - ASPNETCORE_URLS=https://unicorn.core.services.systemstatus.healthcheck:443;http://unicorn.core.services.systemstatus.healthcheck:80
-            - ServiceDiscoveryHostSettings__Url=http://unicorn.core.services.servicediscovery;
+            - ServiceDiscoverySettings__Url=http://unicorn.core.services.servicediscovery
+            - HealthChecksUI__HealthChecks__0__Name=unicorn.core.services.servicediscovery
+            - HealthChecksUI__HealthChecks__0__Uri=http://unicorn.core.services.servicediscovery/hc
+            - HealthChecksUI__HealthChecks__1__Name=unicorn.core.development.clienthost
+            - HealthChecksUI__HealthChecks__1__Uri=http://unicorn.core.development.clienthost/hc
+            - HealthChecksUI__HealthChecks__2__Name=unicorn.core.development.servicehost
+            - HealthChecksUI__HealthChecks__2__Uri=http://unicorn.core.development.servicehost/hc
+            - HealthChecksUI__HealthChecks__3__Name=unicorn.core.services.apigateway.ocelot
+            - HealthChecksUI__HealthChecks__3__Uri=http://unicorn.core.services.apigateway.ocelot/hc
+            - HealthChecksUI__HealthChecks__4__Name=unicorn.eshop.catalog
+            - HealthChecksUI__HealthChecks__4__Uri=http://unicorn.eshop.catalog/hc
+            - HealthChecksUI__HealthChecks__5__Name=unicorn.eshop.discount
+            - HealthChecksUI__HealthChecks__5__Uri=http://unicorn.eshop.discount/hc
+            - HealthChecksUI__HealthChecks__6__Name=unicorn.eshop.cart
+            - HealthChecksUI__HealthChecks__6__Uri=http://unicorn.eshop.cart/hc    
         depends_on:
             - unicorn.core.services.servicediscovery
         ports:
