some more changes regarding health checks

--- a/core/services/system-status/Unicorn.Core.Services.SystemStatus.HealthCheck/appsettings.Development.json
+++ b/core/services/system-status/Unicorn.Core.Services.SystemStatus.HealthCheck/appsettings.Development.json
@@ -11,7 +11,7 @@
   "HealthChecks-UI": {
     "HealthChecks": [
       {
-        "Name": "ServiceDiscovery",
+        "Name": "Unicorn.Core.Services.ServiceDiscovery",
         "Uri": "http://localhost:5081/hc"
       },
       {
@@ -21,6 +21,22 @@
       {
         "Name": "Unicorn.Core.Development.ClientHost",
         "Uri": "http://localhost:5001/hc"
+      },
+      {
+        "Name": "Unicorn.eShop.Cart",
+        "Uri": "http://localhost:5065/hc"
+      },
+      {
+        "Name": "Unicorn.eShop.Discount",
+        "Uri": "http://localhost:5220/hc"
+      },
+      {
+        "Name": "Unicorn.eShop.Catalog",
+        "Uri": "http://localhost:5064/hc"
+      },
+      {
+        "Name": "Unicorn.Core.Services.ApiGateway.Ocelot",
+        "Uri": "http://localhost:5121/hc"
       }
     ],
     "Webhooks": [
