--- a/core/infrastructure/Unicorn.Core.Infrastructure.HostConfiguration.SDK/Unicorn.Core.Infrastructure.HostConfiguration.SDK.csproj
+++ b/core/infrastructure/Unicorn.Core.Infrastructure.HostConfiguration.SDK/Unicorn.Core.Infrastructure.HostConfiguration.SDK.csproj
@@ -21,6 +21,7 @@
 		<PackageReference Include="Castle.Core" Version="4.4.1" />
 		<PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.20.0" />
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
+		<PackageReference Include="Polly" Version="7.2.3" />
 		<PackageReference Include="RestSharp" Version="107.0.1" />
 		<PackageReference Include="System.Reflection.MetadataLoadContext" Version="6.0.0" />
 		<PackageReference Include="OpenIddict.Validation.AspNetCore" Version="3.1.1" />
