added health checks for eShop services

--- a/eShop/cart/Unicorn.eShop.Cart/Unicorn.eShop.Cart.csproj
+++ b/eShop/cart/Unicorn.eShop.Cart/Unicorn.eShop.Cart.csproj
@@ -17,6 +17,7 @@
 		<PackageReference Include="OneOf" Version="3.0.205" />
 		<PackageReference Include="Unicorn.eShop.Catalog.SDK" Version="1.0.0" />
 		<PackageReference Include="Unicorn.eShop.Discount.SDK" Version="1.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="6.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
