--- a/src/core/infrastructure/Unicorn.Core.Infrastructure.HostConfiguration.SDK/Unicorn.Core.Infrastructure.HostConfiguration.SDK.csproj
+++ b/src/core/infrastructure/Unicorn.Core.Infrastructure.HostConfiguration.SDK/Unicorn.Core.Infrastructure.HostConfiguration.SDK.csproj
@@ -1,26 +1,29 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<ItemGroup>
-		<PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="6.0.4" />
-		<PackageReference Include="Azure.Identity" Version="1.5.0" />
-		<PackageReference Include="FluentValidation" Version="10.3.6" />
-		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="10.3.6" />
-		<PackageReference Include="MassTransit.AspNetCore" Version="7.3.0" />
-		<PackageReference Include="MassTransit.Azure.ServiceBus.Core" Version="7.3.0" />
-		<PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.0" />
-		<PackageReference Include="MediatR" Version="10.0.0" />
-		<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
-		<PackageReference Include="Ardalis.GuardClauses" Version="3.3.0" />
-		<PackageReference Include="Castle.Core" Version="4.4.1" />
-		<PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.20.0" />
-		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
-		<PackageReference Include="Polly" Version="7.2.3" />
-		<PackageReference Include="RestSharp" Version="107.0.1" />
-		<PackageReference Include="System.Reflection.MetadataLoadContext" Version="6.0.0" />
-		<PackageReference Include="OpenIddict.Validation.AspNetCore" Version="3.1.1" />
-		<PackageReference Include="OpenIddict.Validation.SystemNetHttp" Version="3.1.1" />
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+		<PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="8.0.0" />
+		<PackageReference Include="Azure.Identity" Version="1.10.4" />
+		<PackageReference Include="FluentValidation" Version="11.9.0" />
+		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
+		<PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
+		<PackageReference Include="MassTransit.Azure.ServiceBus.Core" Version="8.1.3" />
+		<PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.1" />
+		<PackageReference Include="MediatR" Version="12.2.0" />
+		<PackageReference Include="Ardalis.GuardClauses" Version="4.3.0" />
+		<PackageReference Include="Castle.Core" Version="5.1.1" />
+		<PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.22.0" />
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+		<PackageReference Include="Polly" Version="8.2.1" />
+		<PackageReference Include="RestSharp" Version="110.2.0" />
+		<PackageReference Include="System.Reflection.MetadataLoadContext" Version="8.0.0" />
+		<PackageReference Include="OpenIddict.Validation.AspNetCore" Version="5.0.1" />
+		<PackageReference Include="OpenIddict.Validation.SystemNetHttp" Version="5.0.1" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+		<PackageReference Include="Grpc.AspNetCore" Version="2.60.0" />
+		<PackageReference Include="Grpc.Tools" Version="2.60.0">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 	</ItemGroup>
 
 	<ItemGroup>
@@ -28,7 +31,7 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="SonarAnalyzer.CSharp" Version="8.33.0.40503">
+		<PackageReference Include="SonarAnalyzer.CSharp" Version="9.16.0.82469">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
