--- a/src/core/development/Unicorn.Core.Development.ClientHost/appsettings.json
+++ b/src/core/development/Unicorn.Core.Development.ClientHost/appsettings.json
@@ -13,15 +13,15 @@
       "Microsoft.AspNetCore": "Trace"
     }
   },
-  "ServiceDiscoveryServiceUrl": "http://localhost:5081",
-  "AuthenticationSettings": {
-    "AuthorityUrl": "https://localhost:44319/",
-    "ClientCredentials": {
-      "ClientId": "console",
-      "ClientSecret": "388D45FA-B36B-4988-BA59-B187D329C207",
-      "Scopes": ""
-    }
-  },
+  //"ServiceDiscoveryServiceUrl": "http://localhost:5081",
+  //"AuthenticationSettings": {
+  //  "AuthorityUrl": "https://localhost:44319/",
+  //  "ClientCredentials": {
+  //    "ClientId": "console",
+  //    "ClientSecret": "388D45FA-B36B-4988-BA59-B187D329C207",
+  //    "Scopes": ""
+  //  }
+  //},
   "ClientHostConfiguration": {
     "DbConnectionString": "Server=localhost;Port=5432;Database=CartDb;User Id=admin;Password=admin1234;",
     "ServiceDiscoverySettings": {
