--- a/src/core/infrastructure/Unicorn.Core.Infrastructure.Communication.Http.SDK/Unicorn.Core.Infrastructure.Communication.Http.SDK.csproj
+++ b/src/core/infrastructure/Unicorn.Core.Infrastructure.Communication.Http.SDK/Unicorn.Core.Infrastructure.Communication.Http.SDK.csproj
@@ -1,5 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<ItemGroup>
+		<PackageReference Include="Refit.HttpClientFactory" Version="7.0.0" />
 		<PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
