--- a/NuGet.config
+++ b/NuGet.config
@@ -7,7 +7,7 @@
 	<packageSourceCredentials>
 		<github>
 			<add key="Username" value="dsavickij" />
-			<add key="ClearTextPassword" value="" />
+			<add key="ClearTextPassword" value="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" />
 		</github>
 	</packageSourceCredentials>
 </configuration>
