--- a/src/core/services/system-status/Unicorn.Core.Services.SystemStatus.HealthCheck/Unicorn.Core.Services.SystemStatus.HealthCheck.csproj
+++ b/src/core/services/system-status/Unicorn.Core.Services.SystemStatus.HealthCheck/Unicorn.Core.Services.SystemStatus.HealthCheck.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
 	<UserSecretsId>92ed8ca9-7f0b-4dc9-9783-60d1b345dce8</UserSecretsId>
@@ -7,11 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AspNetCore.HealthChecks.UI" Version="8.0.0" />
-    <PackageReference Include="AspNetCore.HealthChecks.UI.InMemory.Storage" Version="8.0.0" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
-    <PackageReference Include="Refit" Version="7.0.0" />
-    <PackageReference Include="RestSharp" Version="110.2.0" />
+    <PackageReference Include="AspNetCore.HealthChecks.UI" Version="9.0.0" />
+    <PackageReference Include="AspNetCore.HealthChecks.UI.InMemory.Storage" Version="9.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
+    <PackageReference Include="Refit" Version="8.0.0" />
+    <PackageReference Include="RestSharp" Version="112.1.0" />
     <PackageReference Include="Unicorn.Core.Infrastructure.Communication.Common" Version="1.0.0" />
     <PackageReference Include="Unicorn.Core.Services.ServiceDiscovery.SDK" Version="1.0.0" />
   </ItemGroup>
