--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.4'
+version: '3.8'
 
 services:
     rabbitmq:
@@ -8,7 +8,7 @@ services:
         image: postgres
 
     servicediscoverydb:
-        image: mcr.microsoft.com/mssql/server:2022-latest
+        image: mcr.microsoft.com/mssql/server:2025-latest
 
     unicorn.eshop.cart:
         image: ${DOCKER_REGISTRY-}unicorneshopcart
@@ -68,3 +68,4 @@ services:
 
 volumes:
     postgres_data:
+    sql-data:
