cleaned-up launchSettings.json, started fixing self registration in ServiceDiscovery service

--- a/src/core/services/service-discovery/Unicorn.Core.Services.ServiceDiscovery/appsettings.Development.json
+++ b/src/core/services/service-discovery/Unicorn.Core.Services.ServiceDiscovery/appsettings.Development.json
@@ -6,10 +6,10 @@
     }
   },
   "ServiceDiscoveryHostSettings": {
-    "DbConnectionString": "Server=127.0.0.1;Database=ServiceDiscoveryDb;User Id=sa;Password=aDmin1234;",
+    "DbConnectionString": "Server=127.0.0.1,1433;Database=ServiceDiscoveryDb;User Id=sa;Password=aDmin1234;TrustServerCertificate=True",
     "ServiceDiscoverySettings": {
       "ExecuteSelfRegistration": false,
-      "Url": "http://localhost:5081"
+      "Url": "http://localhost:8002"
     },
     "OneWayCommunicationSettings": {
       "ConnectionString": "amqp://guest:guest@localhost:5672",
