cleaned launchSettings.json, renamed SDK project

--- a/src/core/development/Unicorn.Core.Development.Service.SDK/Unicorn.Core.Development.Service.SDK.csproj
+++ b/src/core/development/Unicorn.Core.Development.Service.SDK/Unicorn.Core.Development.Service.SDK.csproj
@@ -1,4 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+	<PropertyGroup>
+	  <RootNamespace>Unicorn.Core.Development.ServiceHost.SDK</RootNamespace>
+	</PropertyGroup>
 	<ItemGroup>
 		<None Remove="Services\gRPC\Protos\Custom\Types.proto" />
 		<None Remove="Services\gRPC\Protos\MultiplicationGrpcService.proto" />
