--- a/src/core/infrastructure/Unicorn.Core.Infrastructure.Host.SDK/Unicorn.Core.Infrastructure.Host.SDK.csproj
+++ b/src/core/infrastructure/Unicorn.Core.Infrastructure.Host.SDK/Unicorn.Core.Infrastructure.Host.SDK.csproj
@@ -14,6 +14,7 @@
 		<PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.23.0" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.7" />
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.7" />
+		<PackageReference Include="OneOf" Version="3.0.271" />
 		<PackageReference Include="Polly" Version="8.6.2" />
 		<PackageReference Include="RestSharp" Version="112.1.0" />
 		<PackageReference Include="System.Reflection.MetadataLoadContext" Version="9.0.7" />
