project structure refactoring

--- a/src/core/development/Unicorn.Core.Development.Server/Unicorn.Core.Development.Server.csproj
+++ b/src/core/development/Unicorn.Core.Development.Server/Unicorn.Core.Development.Server.csproj
@@ -24,4 +24,8 @@
 		<ProjectReference Include="..\Unicorn.Core.Development.Server.SDK\Unicorn.Core.Development.Server.SDK.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Remove="uploads\orkela.png" />
+	</ItemGroup>
+
 </Project>
