--- a/src/core/services/authentication/Unicorn.Core.Services.Authentication.OpenIddict/Properties/launchSettings.json
+++ b/src/core/services/authentication/Unicorn.Core.Services.Authentication.OpenIddict/Properties/launchSettings.json
@@ -1,20 +1,6 @@
 {
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:12345",
-      "sslPort": 44319
-    }
-  },
+  "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
     "Unicorn.Core.Services.Authentication.OpenIddict": {
       "commandName": "Project",
       "launchBrowser": true,
